##  Copyright 2006-2023 Carnegie Mellon University
##  See license information in LICENSE.txt.

##  Process this file with automake to produce Makefile.in
##  ------------------------------------------------------------------------
##  Makefile.am (toplevel)
##  autotools build system for libfixbuf
##  ------------------------------------------------------------------------
##  Authors: Brian Trammell
##  ------------------------------------------------------------------------

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src include
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libfixbuf.pc

include doxygen.am

MOSTLYCLEANFILES = $(DX_CLEANFILES)
DISTCLEANFILES = $(RELEASES_XML)

RELEASES_XML = doc/releases.xml


dist-hook: docs copy-doxygen-doc

docs: make-doc-path doxygen-doc repair-doxy-docs subdir-docs $(RELEASES_XML)

make-doc-path:
	test -d $(top_builddir)/doc/html || $(MKDIR_P) $(top_builddir)/doc/html

# Doxygen adds both id="foo" and name="foo" attributes. Remove name.
REPAIR_DOXY_DOCS = \
 if test -d doc/html/libfixbuf ; then \
   for i in `find doc/html/libfixbuf -name '*.html'` ; do \
     $(PERL) -i -lpwe 's/\b(id=("[^">]+")) +name=\2/$$1/g; s/\bname=("[^">]+") +(id=\1)/$$2/g;' $$i ; \
   done ; \
 fi

repair-doxy-docs:
	$(REPAIR_DOXY_DOCS)

subdir-docs:
	cd $(top_builddir)/src && $(MAKE) docs

copy-doxygen-doc:
	cp -pR doc/html $(distdir)/doc

RUN_NEWS2XHTML = \
 srcdir='' ; \
 test -f ./doc/news2xhtml.pl || srcdir=$(srcdir)/ ; \
 if $(AM_V_P) ; then \
 echo "$(PERL) $${srcdir}doc/news2xhtml.pl < '$<' > '$@'" ; \
 else echo "  GEN     " $@ ; fi ; \
 $(PERL) $${srcdir}doc/news2xhtml.pl < "$<" > "$@" || \
 { rm "$@" ; exit 1 ; }

$(RELEASES_XML): NEWS
	@$(RUN_NEWS2XHTML)

EXTRA_DIST = \
     Doxyfile.in \
     libfixbuf.spec.in \
     LICENSE.txt \
     doc/Doxyhead.html \
     doc/Doxyfoot.html \
     doc/DoxygenLayout.xml \
     doc/add-header.pl \
     doc/doxygen.css \
     doc/news2xhtml.pl \
     test/sample_collector.c \
     test/sample_exporter.c

# Configuration file for uncrustify
UNCRUSTIFY_CFG = uncrustify.cfg

EXTRA_DIST += $(UNCRUSTIFY_CFG)

# List of files to run uncrustify over.  This list is generated by
#
# hg files --exclude 'test/*' --exclude 'scripts/*' \
#          --include '**/*.[ch]' --include '**/*.[ch].in'
UNCRUSTIFY_FILES = \
    include/fixbuf/autoinc.h \
    include/fixbuf/private.h \
    include/fixbuf/public.h \
    include/fixbuf/version.h.in \
    src/fbcollector.c \
    src/fbcollector.h \
    src/fbconnspec.c \
    src/fbexporter.c \
    src/fbinfomodel.c \
    src/fblistener.c \
    src/fbnetflow.c \
    src/fbsession.c \
    src/fbsflow.c \
    src/fbtemplate.c \
    src/fbuf.c \
    src/fbxml.c \
    src/ipfix2json.c \
    src/ipfix2json.h.in \
    src/ipfix2jsonPrint.c \
    src/ipfixDump.c \
    src/ipfixDump.h.in \
    src/ipfixDumpPrint.c

UNCRUSTIFY_RUN = \
  srcdir='' ; \
  test -f "$(UNCRUSTIFY_CFG)" || srcdir="$(srcdir)/" ; \
  cfg="$${srcdir}$(UNCRUSTIFY_CFG)" ; \
  list='${UNCRUSTIFY_FILES}' ; \
  for f in $$list ; do \
    test -f "$$f" || f="$${srcdir}$$f" ; \
    echo "$$f" | uncrustify -c "$${cfg}" -l C -F - $${uncrustify_flags} ; \
  done

# Run uncrustify on each file and say whether it passes or fails
uncrustify-check:
	uncrustify_flags="--check" ; $(UNCRUSTIFY_RUN)

# Run uncrustify on each file and put output in FILE.uncrustify, but
# only if there are changes
uncrustify-run:
	uncrustify_flags="--if-changed" ; $(UNCRUSTIFY_RUN)

# Run uncrustify on each file and replace the source file, creating a backup
uncrustify-replace:
	uncrustify_flags='--replace' ; $(UNCRUSTIFY_RUN)


##  @DISTRIBUTION_STATEMENT_BEGIN@
##  libfixbuf 3.0.0
##
##  Copyright 2022 Carnegie Mellon University.
##
##  NO WARRANTY. THIS CARNEGIE MELLON UNIVERSITY AND SOFTWARE ENGINEERING
##  INSTITUTE MATERIAL IS FURNISHED ON AN "AS-IS" BASIS. CARNEGIE MELLON
##  UNIVERSITY MAKES NO WARRANTIES OF ANY KIND, EITHER EXPRESSED OR IMPLIED,
##  AS TO ANY MATTER INCLUDING, BUT NOT LIMITED TO, WARRANTY OF FITNESS FOR
##  PURPOSE OR MERCHANTABILITY, EXCLUSIVITY, OR RESULTS OBTAINED FROM USE OF
##  THE MATERIAL. CARNEGIE MELLON UNIVERSITY DOES NOT MAKE ANY WARRANTY OF
##  ANY KIND WITH RESPECT TO FREEDOM FROM PATENT, TRADEMARK, OR COPYRIGHT
##  INFRINGEMENT.
##
##  Released under a GNU GPL 2.0-style license, please see LICENSE.txt or
##  contact permission@sei.cmu.edu for full terms.
##
##  [DISTRIBUTION STATEMENT A] This material has been approved for public
##  release and unlimited distribution.  Please see Copyright notice for
##  non-US Government use and distribution.
##
##  Carnegie Mellon(R) and CERT(R) are registered in the U.S. Patent and
##  Trademark Office by Carnegie Mellon University.
##
##  This Software includes and/or makes use of the following Third-Party
##  Software subject to its own license:
##
##  1. GLib-2.0 (https://gitlab.gnome.org/GNOME/glib/-/blob/main/COPYING)
##     Copyright 1995 GLib-2.0 Team.
##
##  2. Doxygen (http://www.gnu.org/licenses/old-licenses/gpl-2.0.html)
##     Copyright 2021 Dimitri van Heesch.
##
##  DM22-0006
##  @DISTRIBUTION_STATEMENT_END@
